<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:gravity="center"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:text="@string/app_name"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button android:id="@+id/menu_new"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_new"
                android:layout_margin="4dp"
                android:layout_weight="1"/>
        <Button android:id="@+id/menu_generate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_generate"
                android:layout_margin="4dp"
                android:layout_weight="1"/>
        <Button android:id="@+id/menu_manual"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_manual"
                android:layout_margin="4dp"
                android:layout_weight="1"/>
        </LinearLayout>
</LinearLayout>