<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/boolean_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textCapCharacters"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:hint="@string/generate_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/generate_button_not_literal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_literal"
            android:padding="6dp"/>

        <Button
            android:id="@+id/generate_button_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:padding="6dp"/>

        <Button
            android:id="@+id/generate_button_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_generate_neutral_button"
            android:padding="6dp"/>
    </LinearLayout>

</LinearLayout>