<!--<com.example.deni.logic.SchemeView-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--tools:context="com.example.deni.logic.LogicFragment>-->
<!--</com.example.deni.logic.SchemeView>-->
<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/drawer_layout"
android:layout_height="match_parent"
android:layout_width="match_parent">

    <!--Defined on runtime-->
    <com.example.deni.logicViewScheme.SchemeView
        android:id="@+id/scheme_view"
        android:background="#FF9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/edit_component_layout"
            android:visibility="gone"
            android:tag="@string/edit_components_string">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_input_connect"
                android:src="@drawable/ic_action_edit"
                android:contentDescription="@string/edit_components_string"
                android:tag="@string/button_tag_edit"
                android:padding="15dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_output_connect"
                android:src="@drawable/ic_action_edit"
                android:contentDescription="@string/edit_components_string"
                android:tag="@string/button_tag_edit"
                android:padding="15dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_component"
                android:src="@drawable/ic_action_overflow"
                android:contentDescription="@string/edit_components_string"
                android:tag="@string/button_tag_edit"
                android:padding="15dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_component"
                android:src="@drawable/ic_action_delete"
                android:contentDescription="@string/edit_components_string"
                android:tag="@string/button_tag_delete"
                android:padding="15dp"/>

        </LinearLayout>

    </com.example.deni.logicViewScheme.SchemeView>

    <!--Left-->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:dividerHeight="0dp"/>

    <!--Right-->
    <ListView
        android:id="@+id/right_drawer"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#259"
        android:dividerHeight="8dp"/>

</android.support.v4.widget.DrawerLayout>